# gp_modulate_cpp

./: README.md
examples/Learning/: Copy_of_ManiLearningstatedependent_3d.m  ManiLearningstatedependent_2d.asv  ManiLearningstatedependent_3d.m  ManipulabilityLearning.m  mani_3d.asv
locally-modulated-ds-master/: CMakeLists.txt  package.xml
locally-modulated-ds-master/include/: lpvDS_no_ros.h
locally-modulated-ds-master/include/locally_modulated_ds/: gp_modulated_ds.hxx
locally-modulated-ds-master/src/: demo_gpmds.cpp
lpvDS/include/: GMM.h  lpvDS.h
lpvDS/src/lpvDS/: GMM.cpp  lpvDS.cpp
